reports/HW_03.log
Traceback (most recent call last):
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/ryan/.conda/envs/newwork/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def pendulum(y, g = 9.81, L = 1):
  '''Computes the right-hand side of the differential equation
  for the fall of a ball, with drag, in SI units.

  Arguments
  ----------    
  state : array of two dependent variables [theta dtheta]^T
  g : acceleration due to gravity
  L : length of pendulum 
  Returns
  -------
  derivs: array of two derivatives [dtheta (-g/L*sin(theta))]^T
  '''
  theta, dtheta = y
  derivs = # your work here
  return derivs
------------------

[0;36m  Input [0;32mIn [2][0;36m[0m
[0;31m    derivs = # your work here[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-4bbef4215eb3>, line 15)

